--- a/code1.1.html
+++ b/code1.1.html
@@ -6,6 +6,7 @@
         <title>Nathaniel's Poem Collection Starting Page</title>
         <link rel="stylesheet" href="code1.1.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <img src 
         
         
     </head>
